--- a/asset/css/base.css
+++ b/asset/css/base.css
@@ -17,11 +17,26 @@ html {
     box-sizing: border-box;
 }
 
-p {
+body {
     font-size: 1.6rem;
     
 }
-
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+@keyframes growth{
+    from {
+        transform: scale(var(--growth-from));
+    }
+    to {
+        transform: scale(var(--growth-to));
+    }
+}
 .modal{
     position: fixed;
     top: 0;
@@ -29,6 +44,7 @@ p {
     bottom:0;
     left: 0;
     display: flex;
+    animation: fadeIn linear 0.1s;
 }
 .modal__overlay{
     position: absolute;
@@ -38,31 +54,42 @@ p {
 
 }
 .modal__body{
+    --growth-from:0.7;
+    --growth-to:1;
     margin: auto;
     position: relative;
     z-index:1;
+    animation: growth linear 0.1s;
 }
 /* Button style */
-.btn{
-    min-width: 142px;
-    height:36px;
+.btn-default{
+    width: 160px;
+    height: 34px;
     text-decoration: none;
     border:none;
     border-radius: 2px;
     font-size: 1.5rem; 
-    padding:0 12px;   
+    padding:10 20px;   
     outline:none;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
+    line-height: 1.6rem;
+    font-size: 1.6rem;
     
 }
-.btn.btn--normal:hover {
+.btn-default:hover {
+    text-decoration: none;
+    color:var(--white-color);
+}
+.btn-default.btn--normal:hover {
     background-color: rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+    color:var(--text-color);
 }
 
-.btn.btn--primary{
+.btn-default.btn--primary{
     background-color: var(--primary-color);
     color: var(--white-color);
 }
