--- a/asset/css/other.css
+++ b/asset/css/other.css
@@ -1,9 +1,9 @@
-/* sign up, log in, contact us */
+/* sign up, log in */
 :root {
     --white-color: #fff;
     --black-color: #000;
     --text-color: #333;
-    --primary-color: #104A74;
+    --primary-color: #FCA311;
     --border-color: #dbdbdb;
 }
 
@@ -17,13 +17,179 @@ html {
     font-family: 'Roboto', sans-serif; 
     box-sizing: border-box;
 }
-.container__app__sign-up{
-    max-width: 500px;
-    margin: 0 auto;
+
+    .container__main.container.wrapper{
+        margin-top: 100px;
+    }
+    .container__app__signUp-login{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: #F9F5EF;
+        padding: 30px 0;
+        margin-top: 20px;
+        box-shadow: 10px 10px 5px #aaaaaa
+
+    }
+    .auth-form__img img{
+        width: 500px;
+        height: 100%;
+    }
+    .container__app__signUp-login__form.auth-form{
+        width: 500px;
+        border-radius: 5px;
+        overflow: hidden;
+    }
+    .auth-form__container{
+        padding: 0 32px;
+    }
+    
+    .auth-form__header{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0; 
+    }
+    .auth-form__heading{
+        font-family: 'Cormorant Garamond', serif;
+        text-align: center;
+        font-weight: 700;
+        font-size: 3rem;
+        color: var(--text-color)
+        }                   
+      
+    .auth-form__switch-btn{
+        font-size: 1.8rem;
+        font-weight: 600;
+        color:var(--primary-color);
+        cursor: pointer;
+    }
+    
+    .auth-form__input{
+        width: 100%;
+        height: 40px;
+        margin-top: 16px;
+        padding: 0 12px;
+        font-size: 1.4rem;
+        border: 1px solid var(--border-color);
+        border-radius: 2px;
+        outline: none;
+
+
+    }
+    .auth-form__input:focus{
+        border-color: #777;
+    }
+    .auth-form__aside{
+        margin-top: 18px;
+    }
+    .auth-form_policy-text{
+        font-size: 1.2rem;
+        text-align: center;
+        padding: 0 12px;
+    }
+    .auth-form_text-link{
+        color: var(--primary-color);
+        text-decoration: none;
+    }
+    .auth-form__help-link:hover{
+        color: var(--text-color);
+        text-decoration: none;
+    }
+    .auth-form__controls{
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+    }
+    
+    .auth-form__socials{
+        padding: 16px 20px;
+        display: flex;
+        justify-content: space-around;
+        margin-top: 24px; 
+    }
+    .auth-form__socials-icon{
+        font-size: 1.8rem;
+        padding-left: 20px;
+    }
+    .auth-form__socials--facebook{
+        color: var(--white-color);
+        background-color: #3a5a98;
+    }
+    .auth-form__socials-facebook.auth-form__socials-icon{
+        color: var(--white-color);
+    }
+    .auth-form__socials-title{
+        margin: 0 20px;
+    }    
+    .auth-form__socials--google{
+        color: var(--primary-color);
+        background-color: var(--border-color);
+    }
+    
+    .auth-form__help {
+        display: flex;
+        justify-content: flex-end;
+    }
+    .auth-form__help-link{
+        text-decoration: none;
+        font-size: 1.4rem;
+        color: var(--primary-color);
+    }
+    .auth-form__help-separate{
+        display:block;
+        height: 2px 16px 0;
+        margin: 0 16px;
+        border-left: 1px solid #eaeaea;
+    }
+    form .error{
+        color: red;
+        font-size: 14px;
+    }
+@media (max-width: 997px){
+    .auth-form__img img{
+        width:300px;
+        height: 100%;
+    }
+}    
+
+@media (max-width: 768px){
+    .container__main.container.wrapper{
+        margin-top: 150px;
+    }
+    .auth-form{
+        width: 400px;
+        margin: 0 auto;
+    }
+    .auth-form__img img{
+        display:none;
+    }
+    
 }
-.container__app__sign-up__form.auth-form__heading{
-    font-family: 'Cormorant Garamond', serif;
-    text-align: center;
-    font-weight: 700;
-    font-size: 3rem;
-}                        
+@media (max-width: 396px) {
+    .container__main.container.wrapper{
+        margin-top: 170px;
+    }
+    .auth-form{
+        width: 300px;
+    }
+    .auth-form__socials.btn-default{
+        font-size: 1.3rem;
+        padding: 10px 10px;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 20px; 
+        width: 100px;
+        height:30px;
+    }
+    .auth-form__controls{
+        margin-top: 20px;
+    }
+    .auth-form__socials-icon{
+        font-size: 1.2rem;
+        padding-left: 10px;
+    }
+    .auth-form__socials-title{
+        margin: 0 15px;
+    }  
+}
