--- a/asset/css/gallery.css
+++ b/asset/css/gallery.css
@@ -2,7 +2,7 @@
     margin-top: 20px;
 }
 .gallery__item{
-    padding: 1.5rem 0;
+    padding: 15px 0;
     background-color: white;
 }
 .gallery__item img{
@@ -12,7 +12,7 @@
 
 .container-second-row--slogan{
     font-weight: 400;
-    font-size: 4.5rem;
+    font-size: 45px;
     font-family: 'Sacramento', cursive;
     text-align: center;
     margin: 20px auto 0;
@@ -38,12 +38,12 @@
 @media (max-width: 768px) {
     .container-second-row .slogan{
         font-weight: 400;
-        font-size: 3.5rem;
+        font-size: 35px;
 }
 }
 @media (max-width: 576px) {
     .container-second-row .slogan{
         font-weight: 400;
-        font-size: 2.5rem;
+        font-size: 25px;
 }
 }
